--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CyberEye Security Camera</title>
+  <title>CyberEye Security Camera Solutions | Advanced Surveillance Technology</title>
+  <meta name="description" content="Discover advanced surveillance camera solutions by CyberEye Security Camera. Experience real-time monitoring, high-resolution video capture, and intelligent analytics for enhanced security.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -50,7 +51,7 @@
 <body>
   <header class="bg-gray-800 py-4">
     <nav class="container mx-auto px-6 flex items-center justify-between">
-      <a href="index.html" class="text-xl font-semibold text-white nav-link">CyberEye Security Camera</a>
+      <a href="index.html" class="text-xl font-semibold text-white nav-link">CyberEye Security Camera Solutions</a>
       <div class="flex space-x-4">
         <a href="index.html" class="text-gray-300 hover:text-white nav-link">Home</a>
         <a href="products.html" class="text-gray-300 hover:text-white nav-link">Products</a>
@@ -63,18 +64,17 @@
   <main>
     <section id="home" class="py-16">
       <div class="container mx-auto px-6">
-        <h1 class="text-4xl font-semibold mb-6 text-center">Welcome to CyberEye Security Camera</h1>
-        <p class="text-gray-600 text-lg text-center">Discover cutting-edge security camera solutions that provide advanced surveillance and peace of mind. We offer high-quality products designed to meet your security needs. Safeguard your property with confidence and ensure the safety of what matters most to you.</p>
+        <h1 class="text-4xl font-semibold mb-6 text-center">Advanced Surveillance Camera Solutions</h1>
+        <p class="text-gray-600 text-lg text-center">Discover cutting-edge security camera solutions that provide advanced surveillance and peace of mind. <a href="products.html" class="text-blue-600">Explore our range of high-quality products</a> designed to meet your security needs.</p>
         <div class="flex justify-center mt-8">
           <a href="products.html" class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:bg-blue-700 transition duration-200 pop-out-button">Explore Our Products</a>
         </div>
       </div>
     </section>
 
-    <!-- Add a new section for surveillance-themed content -->
     <section class="surveillance-section">
       <div class="container mx-auto px-6">
-        <h2 class="surveillance-heading">Powerful Surveillance Solutions</h2>
+        <h2 class="surveillance-heading">Experience Next-Level Security with CyberEye's Surveillance Technology</h2>
         <p class="surveillance-description">Experience the next level of security with CyberEye's advanced surveillance camera systems. Our cutting-edge technology ensures real-time monitoring, high-resolution video capture, and intelligent analytics.</p>
       </div>
     </section>
