--- a/products.html
+++ b/products.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products - CyberEye Security Camera</title>
+  <title>Products - CyberEye Security Camera Solutions</title>
+  <meta name="description" content="Explore our range of advanced security camera products by CyberEye Security Camera Solutions. Protect your property with outdoor and indoor cameras featuring high-resolution video, motion detection, and smart integration.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +14,7 @@
   <header class="bg-gray-800 py-4">
     <nav class="container mx-auto px-6">
       <div class="flex items-center justify-between">
-        <a href="index.html" class="text-xl font-semibold text-white">CyberEye Security Camera</a>
+        <a href="index.html" class="text-xl font-semibold text-white">CyberEye Security Camera Solutions</a>
         <div class="flex space-x-4">
           <a href="index.html" class="text-gray-300 hover:text-white">Home</a>
           <a href="products.html" class="text-gray-300 hover:text-white">Products</a>
@@ -27,41 +28,41 @@
   <main>
     <section id="products" class="py-16">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-semibold mb-10">Our Products</h2>
+        <h2 class="text-3xl font-semibold mb-10">Explore Our Advanced Security Camera Products</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-          <!-- Existing Product 1 -->
+          <!-- Product 1 -->
           <div class="bg-white rounded-lg shadow-lg p-6">
-            <img src="camera1.jpg" alt="Camera 1" class="w-full mb-6">
+            <img src="camera1.jpg" alt="Outdoor Security Camera" class="w-full mb-6">
             <h3 class="text-xl font-semibold mb-4">Outdoor Security Camera</h3>
-            <p class="text-gray-600">Protect your property with our Outdoor Security Camera. This camera is weatherproof, offers high-resolution video recording, and features advanced motion detection for reliable surveillance in any outdoor environment.</p>
+            <p class="text-gray-600">Enhance your property's security with our Outdoor Security Camera. Weatherproof design, high-resolution video recording, and advanced motion detection provide reliable surveillance in any outdoor environment.</p>
           </div>
 
-          <!-- Existing Product 2 -->
+          <!-- Product 2 -->
           <div class="bg-white rounded-lg shadow-lg p-6">
-            <img src="camera2.jpg" alt="Camera 2" class="w-full mb-6">
+            <img src="camera2.jpg" alt="Indoor PTZ Camera" class="w-full mb-6">
             <h3 class="text-xl font-semibold mb-4">Indoor PTZ Camera</h3>
-            <p class="text-gray-600">Monitor your indoor spaces with our Indoor PTZ Camera. With pan-tilt-zoom functionality and high-definition video, you can remotely control the camera's movement and focus on specific areas of interest for comprehensive surveillance.</p>
+            <p class="text-gray-600">Monitor indoor spaces with precision using our Indoor PTZ Camera. Control pan-tilt-zoom functionality remotely, and enjoy high-definition video for comprehensive surveillance.</p>
           </div>
 
-          <!-- Existing Product 3 -->
+          <!-- Product 3 -->
           <div class="bg-white rounded-lg shadow-lg p-6">
-            <img src="camera3.jpg" alt="Camera 3" class="w-full mb-6">
+            <img src="camera3.jpg" alt="Wireless Video Doorbell" class="w-full mb-6">
             <h3 class="text-xl font-semibold mb-4">Wireless Video Doorbell</h3>
-            <p class="text-gray-600">Enhance the security of your entrance with our Wireless Video Doorbell. It offers real-time video streaming, two-way audio communication, and motion-activated alerts, allowing you to see and communicate with visitors from anywhere.</p>
+            <p class="text-gray-600">Elevate entrance security with our Wireless Video Doorbell. Real-time video streaming, two-way audio, and motion-activated alerts provide seamless communication with visitors from anywhere.</p>
           </div>
 
           <!-- New Product 1 -->
           <div class="bg-white rounded-lg shadow-lg p-6">
-            <img src="camera4.jpg" alt="Camera 4" class="w-full mb-6">
+            <img src="camera4.jpg" alt="Indoor Security Camera" class="w-full mb-6">
             <h3 class="text-xl font-semibold mb-4">Indoor Security Camera</h3>
-            <p class="text-gray-600">Keep an eye on your indoor spaces with our Indoor Security Camera. It features advanced night vision, motion detection, and easy integration with your smart home system for comprehensive indoor surveillance.</p>
+            <p class="text-gray-600">Monitor indoor spaces efficiently with our Indoor Security Camera. Advanced night vision, motion detection, and smart home integration offer comprehensive indoor surveillance.</p>
           </div>
 
           <!-- New Product 2 -->
           <div class="bg-white rounded-lg shadow-lg p-6">
-            <img src="camera5.jpg" alt="Camera 5" class="w-full mb-6">
+            <img src="camera5.jpg" alt="360-Degree Outdoor Camera" class="w-full mb-6">
             <h3 class="text-xl font-semibold mb-4">360-Degree Outdoor Camera</h3>
-            <p class="text-gray-600">Get complete outdoor coverage with our 360-Degree Outdoor Camera. Its panoramic view and weather-resistant design make it ideal for monitoring large outdoor areas, and its advanced analytics provide intelligent surveillance.</p>
+            <p class="text-gray-600">Get complete outdoor coverage using our 360-Degree Outdoor Camera. Panoramic view and weather-resistant design make it ideal for monitoring large outdoor areas, while advanced analytics provide intelligent surveillance.</p>
           </div>
         </div>
       </div>
@@ -70,7 +71,7 @@
 
   <footer class="bg-gray-800 py-4">
     <div class="container mx-auto px-6 text-white text-center">
-      <p>&copy; 2023 CyberEye Security Camera. All rights reserved.</p>
+      <p>&copy; 2023 CyberEye Security Camera Solutions. All rights reserved.</p>
     </div>
   </footer>
 
