--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - CyberEye Security Camera</title>
+  <title>Contact Us - CyberEye Security Camera Solutions</title>
+  <meta name="description" content="Contact us at CyberEye Security Camera Solutions for inquiries about our advanced security camera solutions. Get in touch with our team to discuss your needs and receive assistance regarding our services.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +14,7 @@
   <header class="bg-gray-800 py-4">
     <nav class="container mx-auto px-6">
       <div class="flex items-center justify-between">
-        <a href="index.html" class="text-xl font-semibold text-white">CyberEye Security Camera</a>
+        <a href="index.html" class="text-xl font-semibold text-white">CyberEye Security Camera Solutions</a>
         <div class="flex space-x-4">
           <a href="index.html" class="text-gray-300 hover:text-white">Home</a>
           <a href="products.html" class="text-gray-300 hover:text-white">Products</a>
@@ -27,21 +28,21 @@
   <main>
     <section id="contact" class="py-16">
       <div class="container mx-auto px-6">
-        <h2 class="text-3xl font-semibold mb-10">Contact Us</h2>
+        <h2 class="text-3xl font-semibold mb-10">Get in Touch with CyberEye Security Camera Solutions</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <div>
-            <h3 class="text-xl font-semibold mb-4">Get in Touch</h3>
-            <p class="text-gray-600 mb-4">We would love to hear from you. Feel free to reach out to us for any inquiries or assistance you may require regarding our high-tech camera solutions.</p>
+            <h3 class="text-xl font-semibold mb-4">Reach Out to Us</h3>
+            <p class="text-gray-600 mb-4">Feel free to contact us for inquiries or assistance regarding our advanced security camera solutions.</p>
             <p class="text-gray-600 mb-4">11670 87A Avenue Delta</p>
             <p class="text-gray-600 mb-4">British Columbia, Canada</p>
             <p class="text-gray-600 mb-4">Phone: +1-(672)-999-9397</p>
             <p class="text-gray-600 mb-4">Email: reachout2shivam@gmail.com</p>
           </div>
           <div>
-            <h3 class="text-xl font-semibold mb-4">Send Us a Message! We can offer you the Best Rates! </h3>
+            <h3 class="text-xl font-semibold mb-4">Send Us a Message for Assistance</h3>
             <form id="contact-form" class="w-full max-w-lg" action="https://formspree.io/f/myyqwzdb" method="POST">
               <div class="mb-4">
-                <label for="name" class="block text-gray-700 font-medium mb-2">Name</label>
+                <label for="name" class="block text-gray-700 font-medium mb-2">Your Name</label>
                 <input type="text" id="name" name="name" class="w-full px-4 py-2 border rounded-lg" required>
               </div>
               <div class="mb-4">
@@ -53,7 +54,7 @@
                 <input type="phone" id="phone" name="phone" class="w-full px-4 py-2 border rounded-lg" required>
               </div>
               <div class="mb-4">
-                <label for="message" class="block text-gray-700 font-medium mb-2">Message</label>
+                <label for="message" class="block text-gray-700 font-medium mb-2">Your Message</label>
                 <textarea id="message" name="message" rows="5" class="w-full px-4 py-2 border rounded-lg" required></textarea>
               </div>
               <button type="submit" id="send-button" class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-200">Send Message</button>
@@ -67,7 +68,7 @@
 
   <footer class="bg-gray-800 py-4">
     <div class="container mx-auto px-6 text-white text-center">
-      <p>&copy; 2023 CyberEye Security Camera. All rights reserved.</p>
+      <p>&copy; 2023 CyberEye Security Camera Solutions. All rights reserved.</p>
     </div>
   </footer>
 </body>
