--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact Us - CyberEye Security Camera Solutions</title>
-  <meta name="description" content="Contact us at CyberEye Security Camera Solutions for inquiries about our advanced security camera solutions. Get in touch with our team to discuss your needs and receive assistance regarding our services.">
+  <meta name="description" content="Contact CyberEye Security Camera Solutions for professional security camera services. Get in touch with us for inquiries and assistance regarding security solutions in British Columbia, including Delta, Surrey, Langley, Kelowna, Abbotsford, Burnaby, and Vancouver.">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -31,10 +31,19 @@
         <h2 class="text-3xl font-semibold mb-10">Get in Touch with CyberEye Security Camera Solutions</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <div>
-            <h3 class="text-xl font-semibold mb-4">Reach Out to Us</h3>
-            <p class="text-gray-600 mb-4">Feel free to contact us for inquiries or assistance regarding our advanced security camera solutions.</p>
-            <p class="text-gray-600 mb-4">11670 87A Avenue Delta</p>
+            <h3 class="text-xl font-semibold mb-4">Contact Us for Professional Security Solutions</h3>
+            <p class="text-gray-600 mb-4">Reach out to CyberEye Security Camera Solutions for inquiries and assistance regarding advanced security camera services.</p>
             <p class="text-gray-600 mb-4">British Columbia, Canada</p>
+            <p class="text-gray-600 mb-4">Service Available in:</p>
+            <ul class="list-disc list-inside text-gray-600 mb-4">
+              <li>Delta</li>
+              <li>Surrey</li>
+              <li>Langley</li>
+              <li>Kelowna</li>
+              <li>Abbotsford</li>
+              <li>Burnaby</li>
+              <li>Vancouver</li>
+            </ul>
             <p class="text-gray-600 mb-4">Phone: +1-(672)-999-9397</p>
             <p class="text-gray-600 mb-4">Email: reachout2shivam@gmail.com</p>
           </div>
