--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <nav class="container mx-auto px-6 flex items-center justify-between">
       <a href="index.html" class="text-xl font-semibold text-white nav-link">CyberEye Security Camera Solutions</a>
       <div class="flex space-x-4">
-        <a href="index.html" class="text-gray-300 hover:text-white nav-link">Home</a>
-        <a href="products.html" class="text-gray-300 hover:text-white nav-link">Products</a>
-        <a href="services.html" class="text-gray-300 hover:text-white nav-link">Services</a>
-        <a href="contact.html" class="text-gray-300 hover:text-white nav-link">Contact</a>
+        <a href="./" class="text-gray-300 hover:text-white nav-link">Home</a>
+        <a href="./products" class="text-gray-300 hover:text-white nav-link">Products</a>
+        <a href="./services" class="text-gray-300 hover:text-white nav-link">Services</a>
+        <a href="./contact" class="text-gray-300 hover:text-white nav-link">Contact</a>
       </div>
     </nav>
   </header>
@@ -67,7 +67,7 @@
         <h1 class="text-4xl font-semibold mb-6 text-center">Advanced Surveillance Camera Solutions</h1>
         <p class="text-gray-600 text-lg text-center">Discover cutting-edge security camera solutions that provide advanced surveillance and peace of mind. <a href="products.html" class="text-blue-600">Explore our range of high-quality products</a> designed to meet your security needs.</p>
         <div class="flex justify-center mt-8">
-          <a href="products.html" class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:bg-blue-700 transition duration-200 pop-out-button">Explore Our Products</a>
+          <a href="./products" class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 focus:bg-blue-700 transition duration-200 pop-out-button">Explore Our Products</a>
         </div>
       </div>
     </section>
