--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
   <header class="bg-gray-800 py-4">
     <nav class="container mx-auto px-6">
       <div class="flex items-center justify-between">
-        <a href="index.html" class="text-xl font-semibold text-white">CyberEye Security Camera Solutions</a>
+        <a href="./" class="text-xl font-semibold text-white">CyberEye Security Camera Solutions</a>
         <div class="flex space-x-4">
           <a href="index.html" class="text-gray-300 hover:text-white">Home</a>
           <a href="products.html" class="text-gray-300 hover:text-white">Products</a>
