--- a/products.html
+++ b/products.html
@@ -16,10 +16,10 @@
       <div class="flex items-center justify-between">
         <a href="./" class="text-xl font-semibold text-white">CyberEye Security Camera Solutions</a>
         <div class="flex space-x-4">
-          <a href="index.html" class="text-gray-300 hover:text-white">Home</a>
-          <a href="products.html" class="text-gray-300 hover:text-white">Products</a>
-          <a href="services.html" class="text-gray-300 hover:text-white">Services</a>
-          <a href="contact.html" class="text-gray-300 hover:text-white">Contact</a>
+          <a href="./" class="text-gray-300 hover:text-white">Home</a>
+          <a href="./products" class="text-gray-300 hover:text-white">Products</a>
+          <a href="./services" class="text-gray-300 hover:text-white">Services</a>
+          <a href="./contact" class="text-gray-300 hover:text-white">Contact</a>
         </div>
       </div>
     </nav>
